--- a/src/qt/emilpro/mainwindow.ui
+++ b/src/qt/emilpro/mainwindow.ui
@@ -146,7 +146,17 @@
            <item>
             <layout class="QVBoxLayout" name="verticalLayout_25">
              <item>
-              <widget class="QTextEdit" name="textEdit_2"/>
+              <widget class="QTextEdit" name="sourceTextEdit">
+               <property name="font">
+                <font>
+                 <family>Monospace</family>
+                 <pointsize>10</pointsize>
+                </font>
+               </property>
+               <property name="textInteractionFlags">
+                <set>Qt::TextSelectableByKeyboard|Qt::TextSelectableByMouse</set>
+               </property>
+              </widget>
              </item>
             </layout>
            </item>
@@ -186,7 +196,7 @@
             </layout>
            </item>
            <item>
-            <widget class="QTextEdit" name="textEdit"/>
+            <widget class="QTextEdit" name="instructionTextEdit"/>
            </item>
            <item>
             <widget class="QLabel" name="label_2">
