qt gui: Disable scroll bar

--- a/src/qt/emilpro/mainwindow.ui
+++ b/src/qt/emilpro/mainwindow.ui
@@ -97,6 +97,9 @@
                    <pointsize>10</pointsize>
                   </font>
                  </property>
+                 <property name="verticalScrollBarPolicy">
+                  <enum>Qt::ScrollBarAlwaysOff</enum>
+                 </property>
                  <property name="editTriggers">
                   <set>QAbstractItemView::NoEditTriggers</set>
                  </property>
