--- a/src/gtk/emilpro.glade
+++ b/src/gtk/emilpro.glade
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.16.0 on Sun Dec 29 14:41:48 2013 -->
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
   <!-- interface-requires gtksourceview 3.0 -->
@@ -483,6 +484,16 @@
                         <accelerator key="r" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
+                    <child>
+                      <object class="GtkCheckMenuItem" id="view_x86_syntax">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="label" translatable="yes">AT&amp;T Syntax (x86)</property>
+                        <property name="use_underline">True</property>
+                        <property name="active">True</property>
+                        <property name="draw_as_radio">True</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
@@ -522,8 +533,8 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="invisible_char">●</property>
-            <accelerator key="l" signal="grab-focus" modifiers="GDK_CONTROL_MASK"/>
             <accelerator key="j" signal="grab-focus" modifiers="GDK_CONTROL_MASK"/>
+            <accelerator key="l" signal="grab-focus" modifiers="GDK_CONTROL_MASK"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -683,7 +694,6 @@
                                     <property name="height_request">210</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="window_placement_set">True</property>
                                     <property name="kinetic_scrolling">False</property>
                                     <child>
                                       <object class="GtkSourceView" id="source_view">
@@ -1267,7 +1277,6 @@ This message is only shown once. </property>
                 <property name="font">Monospace 11</property>
                 <property name="preview_text"/>
                 <property name="show_preview_entry">False</property>
-                <property name="font_name">Monospace 11</property>
                 <property name="use_font">True</property>
                 <property name="use_size">True</property>
               </object>
@@ -1286,7 +1295,6 @@ This message is only shown once. </property>
                 <property name="font">Monospace 11</property>
                 <property name="preview_text"/>
                 <property name="show_preview_entry">False</property>
-                <property name="font_name">Monospace 11</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -1303,7 +1311,6 @@ This message is only shown once. </property>
                 <property name="font">Monospace 10</property>
                 <property name="preview_text"/>
                 <property name="show_preview_entry">False</property>
-                <property name="font_name">Monospace 10</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -1320,7 +1327,6 @@ This message is only shown once. </property>
                 <property name="font">Monospace 11</property>
                 <property name="preview_text"/>
                 <property name="show_preview_entry">False</property>
-                <property name="font_name">Monospace 11</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -1351,7 +1357,6 @@ This message is only shown once. </property>
                 <property name="font">Monospace 11</property>
                 <property name="preview_text"/>
                 <property name="show_preview_entry">False</property>
-                <property name="font_name">Monospace 11</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -1382,7 +1387,6 @@ This message is only shown once. </property>
                 <property name="font">Sans 11</property>
                 <property name="preview_text"/>
                 <property name="show_preview_entry">False</property>
-                <property name="font_name">Sans 11</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
