--- a/src/qt/emilpro/mainwindow.ui
+++ b/src/qt/emilpro/mainwindow.ui
@@ -95,7 +95,7 @@
            <item>
             <widget class="QTabWidget" name="tabWidget">
              <property name="currentIndex">
-              <number>0</number>
+              <number>1</number>
              </property>
              <widget class="QWidget" name="tab">
               <attribute name="title">
@@ -181,7 +181,21 @@
                 <number>0</number>
                </property>
                <item row="0" column="0">
-                <widget class="QTextBrowser" name="textBrowser"/>
+                <widget class="QScrollArea" name="dataViewScrollArea">
+                 <property name="widgetResizable">
+                  <bool>true</bool>
+                 </property>
+                 <widget class="QWidget" name="scrollAreaWidgetContents">
+                  <property name="geometry">
+                   <rect>
+                    <x>0</x>
+                    <y>0</y>
+                    <width>645</width>
+                    <height>212</height>
+                   </rect>
+                  </property>
+                 </widget>
+                </widget>
                </item>
               </layout>
              </widget>
@@ -383,7 +397,6 @@
   <tabstop>symbolTableView</tabstop>
   <tabstop>instructionTableView</tabstop>
   <tabstop>tabWidget</tabstop>
-  <tabstop>textBrowser</tabstop>
   <tabstop>sourceTextEdit</tabstop>
   <tabstop>editInstructionPushButton</tabstop>
   <tabstop>instructionTextEdit</tabstop>
